Adding functionality for fetching data from Firebase database.

--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -22,3 +22,13 @@
     transform: translateY(0);
   }
 }
+
+.meals-loading {
+  text-align: center;
+  color: aliceblue;
+}
+
+.meals-error {
+  text-align: center;
+  color: yellow;
+}
